<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anadir_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_activity"
    android:padding="20dp"
    tools:context=".ui.main.agenda.AnadirContactoFragment">

    <TextView
        android:id="@+id/text_titulo_anadircontacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/anadircontacto"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_nombre_anadircontacto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/campo_nombre"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo_anadircontacto" />

    <EditText
        android:id="@+id/edit_alias_anadircontacto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:hint="@string/campo_alias"
        android:background="@drawable/rounded_corners_white"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nombre_anadircontacto" />

    <EditText
        android:id="@+id/edit_wallet_anadircontacto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:hint="@string/campo_wallet"
        android:background="@drawable/rounded_corners_white"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_alias_anadircontacto" />

    <TextView
        android:id="@+id/text_camposobligatorios_anadircontacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/campos_obligatorios"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_wallet_anadircontacto" />

    <Button
        android:id="@+id/boton_anadirContacto_agenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/boton_aceptar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>