<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D5059"
    tools:context=".ui.authenticator.RegistroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo64x64" />

    <TextView
        android:id="@+id/text_titulo_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:background="@color/fondo_activity"
        android:fontFamily="@font/open_sans"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:text="@string/registro_titulo"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scroll_formulario_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ScrollView
        android:id="@+id/scroll_formulario_registro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#C9C5E3"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@color/boton_principal"
        app:circularflow_defaultRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo_registro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/text_nombre_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_nombre_registro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:fontFamily="@font/open_sans"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_apellidos_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/apellidos"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_apellidos_registro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:fontFamily="@font/open_sans"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_email_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_email_registro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:fontFamily="@font/open_sans"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_telefono_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_telefono_registro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:fontFamily="@font/open_sans"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_wallet_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/wallet"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_wallet_registro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:fontFamily="@font/open_sans"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_password_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password_registro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password_registro"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_password2_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="7dp"
                android:text="@string/password_otravez"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password2_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textStyle="bold">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password2_registro"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/fondo_activity"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_formulario_registro">

        <CheckBox
            android:id="@+id/check_privacidad_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fondo_activity"
            android:checked="false"
            android:fontFamily="@font/open_sans"
            android:text="@string/privacidad_terminos"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:checkedState="unchecked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="548dp" />

        <Button
            android:id="@+id/button_registrarse_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/boton_registrar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>